beginning to revisit

--- a/iterate over a lot of things.ipynb
+++ b/iterate over a lot of things.ipynb
@@ -34,7 +34,7 @@
     "        df = pd.read_csv(folder + '/' + dirn + '/' + file, sep='\\t')\n",
     "        l.append(df)\n",
     "        order.append((dirn,file))\n",
-    "#trash dataframe\n",
+    "#trash dataframe (inconsistent labeling, jeapordizes data integrity)\n",
     "l.pop(63)\n",
     "order.pop(63)\n",
     "gestdict={\n",
@@ -52,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove non-gesture data\n",
     "def only_gestures(df):\n",
     "    df=df[~df['class'].isin([0,7])]\n",
     "    return df"
@@ -59,17 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m=[only_gestures(x) for x in l]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -162,6 +156,8 @@
       "/home/poxlox/anaconda3/lib/python3.7/site-packages/scipy/signal/spectral.py:1969: UserWarning: nperseg = 256 is greater than input length  = 77, using nperseg = 77\n",
       "  .format(nperseg, input_length))\n",
       "/home/poxlox/anaconda3/lib/python3.7/site-packages/scipy/signal/spectral.py:1969: UserWarning: nperseg = 256 is greater than input length  = 85, using nperseg = 85\n",
+      "  .format(nperseg, input_length))\n",
+      "/home/poxlox/anaconda3/lib/python3.7/site-packages/scipy/signal/spectral.py:1969: UserWarning: nperseg = 256 is greater than input length  = 99, using nperseg = 99\n",
       "  .format(nperseg, input_length))\n"
      ]
     },
@@ -169,8 +165,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/poxlox/anaconda3/lib/python3.7/site-packages/scipy/signal/spectral.py:1969: UserWarning: nperseg = 256 is greater than input length  = 99, using nperseg = 99\n",
-      "  .format(nperseg, input_length))\n",
       "/home/poxlox/anaconda3/lib/python3.7/site-packages/scipy/signal/spectral.py:1969: UserWarning: nperseg = 256 is greater than input length  = 93, using nperseg = 93\n",
       "  .format(nperseg, input_length))\n",
       "/home/poxlox/anaconda3/lib/python3.7/site-packages/scipy/signal/spectral.py:1969: UserWarning: nperseg = 256 is greater than input length  = 104, using nperseg = 104\n",
@@ -281,20 +275,28 @@
     }
    ],
    "source": [
+    "# data transformations\n",
+    "m=[only_gestures(x) for x in l]\n",
     "u=[]\n",
     "for frame in m:\n",
     "    t=[]\n",
     "    for gesture in [frame[frame['class']==gest] for gest in [1,2,3,4,5,6]]:\n",
     "        s=[]\n",
+    "        #split gesture sessions\n",
     "        for splittime in [gesture[gesture['time']<gesture['time'].mean()],\n",
     "                          gesture[gesture['time']>gesture['time'].mean()]]:\n",
     "            r=[]\n",
-    "            for timebin in [splittime[len(splittime)//14*i:len(splittime)//14*i+len(splittime)//14] for i in np.arange(0,14)]:\n",
+    "            # create sampling intervals\n",
+    "            for timebin in ([splittime[len(splittime)//14*i:len(splittime)\n",
+    "                                       //14*i+len(splittime)//14] for i in np.arange(0,14)]):\n",
     "                q=[]\n",
+    "                #each channel\n",
     "                for channel in timebin.columns[1:9]:\n",
+    "                    # Welch transformation\n",
     "                    w=welch(timebin[channel])\n",
     "                    freq=w[0][w[1].argmax()]\n",
     "                    q.append(freq)\n",
+    "                    # Magnitude transformation\n",
     "                    mag = timebin[channel].max()-timebin[channel].min()\n",
     "                    q.append(mag)\n",
     "                q.append(timebin['class'].iloc[0])\n",
@@ -307,23 +309,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# each frame\n",
+    "## each gesture\n",
+    "### "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "z=u.copy()\n",
     "combos=[]\n",
+    "# create data combos\n",
     "for idx in range(0,60,2):\n",
     "    u=z.copy()\n",
     "    test_participant=[u.pop(idx)]\n",
     "    test_participant.append(u.pop(idx))\n",
     "    combos.append([u,test_participant])\n",
+    "#same thing but with disjoint due to bad data\n",
     "for idx in range(63,69,2):\n",
     "    u=z.copy()\n",
     "    test_participant=[u.pop(idx)]\n",
     "    test_participant.append(u.pop(idx))\n",
     "    combos.append([u,test_participant])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combos structure\n",
+    "# a particular combination of a single withheld participant\n",
+    "# # \n",
+    "# # # \n",
+    "# # # # each gesture\n",
+    "# # # # # 8 pseudo-mags, 8 frequencies, 1 target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.031746031746031744,\n",
+       " 2e-05,\n",
+       " 0.0,\n",
+       " 8e-05,\n",
+       " 0.007936507936507936,\n",
+       " 0.00013,\n",
+       " 0.023809523809523808,\n",
+       " 0.00035999999999999997,\n",
+       " 0.007936507936507936,\n",
+       " 0.0001,\n",
+       " 0.007936507936507936,\n",
+       " 0.00023,\n",
+       " 0.007936507936507936,\n",
+       " 7.999999999999999e-05,\n",
+       " 0.015873015873015872,\n",
+       " 4e-05,\n",
+       " 1]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combos[0][0][5][0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -338,7 +410,6 @@
     "tefailmat=[]\n",
     "wifailmat=[]\n",
     "for cycle, thing in enumerate(combos):\n",
-    "    \n",
     "    v=[]\n",
     "    x=[]\n",
     "    for session in thing[0]:\n",
